Update CI/CD workflow to use kaluifekwe repositories

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,9 +16,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        repository: digitalwitchdemo/main_bank_app_frontend
-        ref: main
 
 
     - name: Log in to awscli
@@ -62,11 +59,11 @@ jobs:
           GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
           GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
       run: |
-         git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/digitalwitchdemo/kubernetes-manifest.git
+         git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/kaluifekwe/kubernetes-manifest-bank_app.git
          
-         cd kubernetes-manifest
-         git config --global user.email "chukwunonsosmartagbawo@gmail.com"
-         git config --global user.name "smartcloud2023"
+         cd kubernetes-manifest-bank_app
+         git config --global user.email "support@digitalwitchng.online"
+         git config --global user.name "kaluifekwe"
 
          sed -i "s+${{ vars.ECR_REPO }}/bank-frontend:.*+${{ vars.ECR_REPO }}/bank-frontend:${{ github.run_number }}+g" ./bank-project/frontend.yaml
 
